fix overlay on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
+    object-fit: cover;
     background-color: rgba(0,0,0,.4);
     /* background-color: #000000cc; */
   }
